--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "protocol": "zwave", 
     "name": "Z-Wave.Me 4 256", 
     "device_resource": "/api/bridge/v1/device/50/", 
-    "url": "https://github.com/ContinuumBridge/z-wave.me-key-ring/archive/v0.0.1.tar.gz", 
+    "url": "https://github.com/ContinuumBridge/zwave.me_key_ring/archive/v0.0.1.tar.gz", 
     "version": "0.0.1", 
     "provider": "ContinuumBridge", 
     "adaptor_resource": "/api/bridge/v1/adaptor/13/", 
