--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "exe": "adaptor.py", 
     "protocol": "zwave", 
-    "name": "Z-Wave.Me 4 256", 
+    "name": "Z-Wave.Me 1 256", 
     "device_resource": "/api/bridge/v1/device/50/", 
     "url": "https://github.com/ContinuumBridge/zwave.me_key_ring/archive/v0.1.0.tar.gz", 
     "version": "0.1.0", 
     "provider": "ContinuumBridge", 
     "adaptor_resource": "/api/bridge/v1/adaptor/13/", 
-    "description": "Z-Wave.Me Wall Controller with four buttons."
+    "description": "Z-Wave.Me Key Ring Controller with four buttons."
 }
